<resources>
    <string name="app_name">HRC - Delhi</string>
    <string name="contact_us">Contact Us</string>
    <string name="products">Products</string>
    <string name="about_us">About Us</string>
    <string name="home">Home</string>
    <string name="aboutustext"><![CDATA[Harjindra Radio Components Pvt Ltd (HRC) having foot prints across Pan-India majorly covering South India with network of more than 200+ dealers , dealing in total range of Consumer Durable Electronics, Home Appliances and most importantly their Spareparts and accessories. The company was founded by Late S.Gurdip Singh with his brother S.Amarjit Singh in 1968 starting with Radios , Transistors, printed circuit boards and transformers. With changing scenario from last 5 decades the company has evolved with time in various electronics and electrical products.]]></string>
    <string name="harjindra_radio_components">Harjindra Radio Components Pvt. Ltd.</string>
    <string name="amarjit_singh_co_founder">Amarjit Singh (Co-founder)</string>
    <string name="_91_9811065155">📞: +91 9811065155</string>
    <string name="harpal_singh_director">Harpal Singh(Director)</string>
    <string name="_91_9811093181">📞: +91 9811093181</string>
    <string name="karandeep_singh_director">Karandeep Singh (Director)</string>
    <string name="_91_9999085959">📞: +91 9999085959</string>
    <string name="office_56_angoori_bagh_near_redfort_delhi_6">Office - 56, Angoori Bagh Near Redfort , Delhi-6.</string>
    <string name="godown_55_angoori_bagh_near_redfort_delhi_6">Godown- 55, Angoori Bagh Near Redfort,Delhi-6</string>
    <string name="_011_23869199">📞: 011 23869199</string>
    <string name="_011_23865155">📞: 011 23865155</string>
    <string name="email_hrc485_gmail_com">Email: hrc485@gmail.com</string>
    <string name="item_description">Item Description</string>
    <string name="item_one_line_description">Item One Line Description</string>
    <string name="upload_image">Upload image</string>
    <string name="delete_image">Delete Image</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="product_name">Product Name</string>
    <string name="item_name">Item Name</string>

</resources>