<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddItemActivity">

    <include
        android:id="@+id/additem_app_bar"
        layout="@layout/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></include>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/item_name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/additem_app_bar"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/item_name">


        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/item_desc_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/item_name_input"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/item_description">


        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/item_descone_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/item_desc_input"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/item_one_line_description">


        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/additemuploadimagebtn"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/item_descone_input"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/upload_image"
        android:textColor="#ffffff"
        android:textSize="14dp" />

    <Button
        android:id="@+id/additemdeleteimagebtn"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/item_descone_input"
        android:layout_alignParentRight="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/delete_image"
        android:textColor="#ffffff"
        android:textSize="14dp" />


    <TextView
        android:id="@+id/additemresult"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:layout_below="@+id/additemuploadimagebtn"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="23dp"
        android:layout_marginTop="3dp"
        android:textColor="#212121"
        android:textSize="14dp" />

    <Button
    android:id="@+id/additemBtn"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_marginTop="20dp"
    android:layout_marginRight="20dp"
    android:backgroundTint="#008000"
    android:layout_centerHorizontal="true"
    android:gravity="center"
        android:text="@string/add"
    android:textColor="#ffffff"
    android:textSize="14dp" />
    <Button
        android:id="@+id/deleteitemBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/additemBtn"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:backgroundTint="#ff0000"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/delete"
        android:visibility="invisible"
        android:clickable="false"
        android:textColor="#ffffff"
        android:textSize="14dp" />


</RelativeLayout>