<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddProductActivity">

    <include
        android:id="@+id/addprod_app_bar"
        layout="@layout/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></include>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/prod_name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addprod_app_bar"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/product_name">


        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/uploadimagebtn"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/prod_name_input"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/upload_image"
        android:textColor="#ffffff"
        android:textSize="14dp" />

    <Button
        android:id="@+id/deleteimagebtn"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/prod_name_input"
        android:layout_alignParentRight="true"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/delete_image"
        android:textColor="#ffffff"
        android:textSize="14dp" />


    <TextView
        android:id="@+id/result"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:layout_below="@+id/uploadimagebtn"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="23dp"
        android:layout_marginTop="3dp"
        android:textColor="#212121"
        android:textSize="14dp" />

    <Button
        android:id="@+id/addProdBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:backgroundTint="#008000"
        android:layout_gravity="center"
        android:layout_centerHorizontal="true"
        android:text="@string/add"
        android:textColor="#ffffff"
        android:textSize="14dp" />

    <Button
        android:id="@+id/deleteprodBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/addProdBtn"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:backgroundTint="#ff0000"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/delete"
        android:visibility="invisible"
        android:clickable="false"
        android:textColor="#ffffff"
        android:textSize="14dp" />


</RelativeLayout>