<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutUsActivity"
    android:orientation="vertical">

    <include
        layout="@layout/appbar"
        android:id="@+id/aboutusappbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"></include>

    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:textColor="#212121"
            android:layout_margin="5dp"
            android:text="@string/aboutustext"
            android:id="@+id/aboutustext" />
    </androidx.cardview.widget.CardView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:text="@string/products"
            android:background="@drawable/rectanglebg"
            android:layout_margin="10dp"
            android:textSize="18sp"
            android:layout_marginBottom="10dp"
            android:layout_alignParentLeft="true"
            android:id="@+id/aboutus_productsBtn" />

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:text="@string/contact_us"
            android:background="@drawable/rectanglebg"
            android:layout_margin="10dp"
            android:textSize="18sp"
            android:layout_marginBottom="10dp"
            android:layout_alignParentRight="true"
            android:id="@+id/about_ContactUsBtn" />
    </RelativeLayout>


</LinearLayout>
